# piano-tracker

./: .release-please-manifest.json  CHANGELOG.md  README.md  build.ps1  dev.ps1  package-lock.json  package.json  release-please-config.json  tailwind.config.js
.github/workflows/: build-windows.yml  build.yml  manual-build.yml  release-please.yml
src/: App.tsx  index.css  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  notifications.rs  session.rs
src/api/: musicSearch.ts
src/components/: DevToolbar.tsx  DifficultyDots.tsx  FeelingPicker.tsx  Layout.tsx  MasteryBadge.tsx  MoodTrendChart.tsx  PianoRoll.tsx  QuickAssociateBanner.tsx  SessionTagModal.tsx  SessionToast.tsx  SongSearchModal.tsx  UpdateBanner.tsx
src/context/: UpdaterContext.tsx
src/hooks/: useData.ts  useSongs.ts  useUpdater.ts
src/pages/: Achievements.tsx  Charts.tsx  Coach.tsx  Goals.tsx  Heatmap.tsx  History.tsx  Home.tsx  Insights.tsx  Library.tsx  Settings.tsx  Stats.tsx
