[package]
name = "piano-tracker"
version = "0.2.0"
description = "Piano Practice Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "piano_tracker_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
midir = "0.10"

